changed contact phone and fixed testimonials styles flex now aligned

--- a/src/styles/sections/_testimonials.scss
+++ b/src/styles/sections/_testimonials.scss
@@ -1,7 +1,10 @@
 .testimonials {
   &__card {
+    max-width: 78.4rem;
+    margin: 0 auto;
     &:not(:last-child) {
       margin-bottom: $mg-medium;
+      flex-grow: 0;
     }
     @include mobile {
       display: flex;
@@ -13,25 +16,25 @@
     display: block !important;
     min-width: 100px;
     max-height: 100px;
-    margin: 0 auto $mg-small;
+    margin: 0 $mg-small;
     border-radius: 20rem;
     box-shadow: $light-shadow;
   }
 
   &__left {
     margin-left: $mg-small;
+    padding-top: 2rem;
+    flex-grow: 1;
   }
 
   &__name {
     font-weight: bold;
     margin-bottom: $mg-tiny;
     letter-spacing: 0.2rem;
-    text-align: center;
 
     @include mobile {
       margin-left: -120px;
+      text-align: center;
     }
-  }
-  &__text {
   }
 }
